@@ -136,6 +136,12 @@
 		<EOL_SPAN TYPE="COMMENT1">//</EOL_SPAN>
 		<EOL_SPAN TYPE="COMMENT1">#</EOL_SPAN>
 
+		<!-- Readins -->
+		<SPAN_REGEXP HASH_CHAR="<" TYPE="LITERAL1" DELEGATE="PHP_LITERAL">
+			<BEGIN><![CDATA[<<[[:space:]'"]*([[:alnum:]_]+)[[:space:]'"]*]]></BEGIN>
+			<END>$1</END>
+		</SPAN_REGEXP>
+
 		<MARK_FOLLOWING TYPE="KEYWORD3">$</MARK_FOLLOWING>
 
 		<SEQ TYPE="OPERATOR">=</SEQ>
@@ -2566,34 +2572,5 @@
 
 	<RULES SET="PHP_LITERAL" ESCAPE="\" DEFAULT="LITERAL1">
 		<MARK_FOLLOWING TYPE="KEYWORD3">$</MARK_FOLLOWING>
-		<SEQ TYPE="LITERAL1">\</SEQ>
-		<SEQ TYPE="LITERAL1">=</SEQ>
-		<SEQ TYPE="LITERAL1">!</SEQ>
-		<SEQ TYPE="LITERAL1">&gt;=</SEQ>
-		<SEQ TYPE="LITERAL1">&lt;=</SEQ>
-		<SEQ TYPE="LITERAL1">=</SEQ>
-		<SEQ TYPE="LITERAL1">+</SEQ>
-		<SEQ TYPE="LITERAL1">-</SEQ>
-		<SEQ TYPE="LITERAL1">/</SEQ>
-		<SEQ TYPE="LITERAL1">*</SEQ>
-		<SEQ TYPE="LITERAL1">&gt;</SEQ>
-		<SEQ TYPE="LITERAL1">&lt;</SEQ>
-		<SEQ TYPE="LITERAL1">%</SEQ>
-		<SEQ TYPE="LITERAL1">&amp;</SEQ>
-		<SEQ TYPE="LITERAL1">|</SEQ>
-		<SEQ TYPE="LITERAL1">^</SEQ>
-		<SEQ TYPE="LITERAL1">~</SEQ>
-		<SEQ TYPE="LITERAL1">.</SEQ>
-		<SEQ TYPE="LITERAL1">}</SEQ>
-		<SEQ TYPE="LITERAL1">{</SEQ>
-		<SEQ TYPE="LITERAL1">,</SEQ>
-		<SEQ TYPE="LITERAL1">;</SEQ>
-		<SEQ TYPE="LITERAL1">]</SEQ>
-		<SEQ TYPE="LITERAL1">[</SEQ>
-		<SEQ TYPE="LITERAL1">?</SEQ>
-		<SEQ TYPE="LITERAL1">@</SEQ>
-		<SEQ TYPE="LITERAL1">:</SEQ>
-		<SEQ TYPE="LITERAL1">)</SEQ>
-		<SEQ TYPE="LITERAL1">'</SEQ>
 	</RULES>
 </MODE>
